Replace deprecated URL constructor
See https://inside.java/2023/02/15/quality-heads-up/

Release-Notes: skip
Change-Id: Ifcfd59a630fcf2b5674eebac479e52bf49f9922c